--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
-<!DOCTYPE html><html><head>
-    <script src="p5.js"></script>
-    <script src="p5.dom.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
+<!DOCTYPE html>
+<html>
 
-  </head>
-  <body>
-    <h1> MADRID Drink Name Generator </h1>
-    <script src="sketch.js"></script>
-  
+<head>
+  <title>MADRID - DNG</title>
+  <script src="p5.js"></script>
+  <script src="p5.dom.js"></script>
+  <script src="p5.sound.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
 
-</body></html>
+</head>
+
+<body>
+  <h1> MADRID Drink Name Generator </h1>
+  <script src="sketch.js"></script>
+
+
+</body>
+
+</html>
